Implement session keeping
 Why:
 UCS login is fount to cost about 2 seconds, that is two long for a http
 request. To avoid waiting, session keeping feature is introduced in
 ucs service

 How:
 1. For synchronous API, we leverage flask.current_app to store a global
 ucs handler to keep session alive
 2. For asynchronous API, we create a global ucs handler for each
 worker, each worker will have an alive ucs session
 3. Cleanup will be done to close those session if accident happens
