# controllers/ucs_controller.py
@@ -1,7 +1,8 @@
 # Copyright 2017, Dell EMC, Inc.
-from flask import request
+from flask import request, current_app
 from service.ucs import Ucs
 from util.decorator import response_wrapper, status_handler
+from util.util import serialize_ucs_http_headers
 
 
 def login_get():
@@ -29,7 +30,13 @@ def getCatalog(identifier=None):
 @response_wrapper
 @status_handler(default_status=200)
 def getPollers(identifier, classIds):
-    return Ucs.getPollers(request.headers, identifier, classIds)
+    handlers = current_app.config.get("handlers")  or {}
+    return Ucs.getPollers(
+        request.headers, ## Should serilize?
+        identifier,
+        classIds,
+        handlers=handlers
+    )
 
 
 @response_wrapper
